--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,235 +6,240 @@
     android:layout_height="match_parent"
     android:background="#D9EA59"
     tools:context=".MainActivity">
+
     <LinearLayout
-        android:layout_margin="32dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="32dp"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:textSize="30sp"
+            android:text="@string/department_of_computer_science_and_engineering_n"
             android:textAlignment="center"
-            android:text="@string/department_of_computer_science_and_engineering_n"/>
+            android:textColor="#000"
+            android:textSize="30sp" />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon"
-            android:scaleType="fitXY"
             android:layout_gravity="center_horizontal"
-            android:contentDescription="@string/todo" />
+            android:contentDescription="@string/todo"
+            android:scaleType="fitXY"
+            android:src="@drawable/icon" />
 
 
         <EditText
-            android:layout_width="match_parent"
             android:id="@+id/name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/enter_your_name"
             android:layout_marginTop="50dp"
-            android:inputType="textAutoComplete"
-            android:autofillHints="" />
+            android:autofillHints=""
+            android:hint="@string/enter_your_name"
+            android:inputType="textAutoComplete" />
+
         <EditText
             android:id="@+id/regd1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:autofillHints=""
+            android:digits="0123456789"
             android:hint="@string/enter_your_registration_no"
-            android:layout_marginTop="30dp"
-            android:maxLength="10"
-            android:digits="0123456789"
             android:inputType="textAutoComplete"
-            android:autofillHints="" />
+            android:maxLength="10" />
+
         <EditText
-            android:layout_width="match_parent"
             android:id="@+id/no"
-            android:digits="0123456789"
-            android:maxLength="10"
-            android:layout_height="wrap_content"
-            android:hint="@string/enter_your_mobile_number"
-            android:layout_marginTop="30dp"
-            android:inputType="textAutoComplete"
-            android:autofillHints="" />
-        <EditText
             android:layout_width="match_parent"
-            android:id="@+id/email"
             android:layout_height="wrap_content"
-            android:hint="@string/enter_your_email"
             android:layout_marginTop="30dp"
-            android:inputType="textEmailAddress"
-            android:autofillHints="" />
+            android:autofillHints=""
+            android:digits="0123456789"
+            android:hint="@string/enter_your_mobile_number"
+            android:inputType="textAutoComplete"
+            android:maxLength="10" />
+
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:autofillHints=""
+            android:hint="@string/enter_your_email"
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/password_8_characters"
             android:layout_marginTop="30dp"
-            android:inputType="textPassword"
-            android:autofillHints="" />
+            android:autofillHints=""
+            android:hint="@string/password_8_characters"
+            android:inputType="textPassword" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="horizontal">
+
         <Button
-            android:layout_width="wrap_content"
             android:id="@+id/login"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sign_in"
-            android:textSize="20sp"
-            android:textAllCaps="false"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
+            android:text="@string/sign_in"
+            android:textAllCaps="false"
+            android:textSize="20sp"
             tools:ignore="ButtonStyle" />
 
 
-    <TextView
-        android:id="@+id/main_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_medium"
-        android:textAlignment="center"
-        android:layout_marginTop="10dp"
-        android:text="Department Of Computer Science And Engineering"
-        android:textColor="#343434"
-        android:textSize="30sp" />
-    <TextView
-        android:id="@+id/create_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create an account"
-        android:textColor="#b4b5b7"
-        android:textSize="20sp"
-        android:fontFamily="@font/roboto_medium"
-        android:layout_below="@id/main_title"
-        android:layout_centerHorizontal="true"/>
-    <ImageView
-        android:id="@+id/userImage"
-        android:layout_width="150dp"
-        android:layout_height="100dp"
-        android:background="@drawable/user"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/create_text"/>
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/circular_shape"
-        android:elevation="1dp"
-        android:hint="Enter Name"
-        android:layout_below="@+id/userImage"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:paddingLeft="20dp"/>
-    <EditText
-        android:id="@+id/regd1"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/no_border_circle"
-        android:elevation="1dp"
-        android:hint="Enter Registration Number"
-        android:layout_below="@+id/name"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:paddingLeft="20dp"/>
-    <EditText
-        android:id="@+id/user_Mobile"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/no_border_circle"
-        android:elevation="1dp"
-        android:inputType="phone"
-        android:digits="0123456789"
-        android:maxLength="10"
-        android:hint="Enter Mobile Number"
-        android:layout_below="@+id/regd1"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:paddingLeft="20dp"/>
-    <EditText
-        android:id="@+id/user_Email"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/no_border_circle"
-        android:elevation="1dp"
-        android:hint="Enter Email "
-        android:layout_below="@+id/user_Mobile"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:paddingLeft="20dp"/>
-    <EditText
-        android:id="@+id/user_password"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/no_border_circle"
-        android:elevation="1dp"
-        android:inputType="textPassword"
-        android:hint="Password (8 Characters ) "
-        android:layout_below="@+id/user_Email"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:paddingLeft="20dp"/>
+        <TextView
+            android:id="@+id/main_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/roboto_medium"
+            android:text="Department Of Computer Science And Engineering"
+            android:textAlignment="center"
+            android:textColor="#343434"
+            android:textSize="30sp" />
 
-    <Button
-        android:id="@+id/create_acc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/user_password"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/button_shape"
-        android:elevation="10dp"
-        android:fontFamily="@font/roboto_bold"
-        android:text="create"
-        android:textColor="#fff"
-        android:textSize="16sp" />
-    <LinearLayout
-        android:id="@+id/layout_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/create_acc"
-        android:layout_centerHorizontal="true"
-        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/create_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/main_title"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/roboto_medium"
+            android:text="Create an account"
+            android:textColor="#b4b5b7"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/userImage"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:layout_below="@id/create_text"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/user" />
+
+        <EditText
+            android:id="@+id/new_username"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/userImage"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/no_border_circle"
+            android:elevation="1dp"
+            android:hint="Enter Name"
+            android:paddingLeft="20dp" />
+
+        <EditText
+            android:id="@+id/new_reged"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/name"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/no_border_circle"
+            android:elevation="1dp"
+            android:hint="Enter Registration Number"
+            android:paddingLeft="20dp" />
+
+        <EditText
+            android:id="@+id/user_Mobile"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/regd1"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/no_border_circle"
+            android:digits="0123456789"
+            android:elevation="1dp"
+            android:hint="Enter Mobile Number"
+            android:inputType="phone"
+            android:maxLength="10"
+            android:paddingLeft="20dp" />
+
+        <EditText
+            android:id="@+id/user_Email"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/user_Mobile"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/no_border_circle"
+            android:elevation="1dp"
+            android:hint="Enter Email "
+            android:paddingLeft="20dp" />
+
+        <EditText
+            android:id="@+id/user_password"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@+id/user_Email"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/no_border_circle"
+            android:elevation="1dp"
+            android:hint="Password (8 Characters ) "
+            android:inputType="textPassword"
+            android:paddingLeft="20dp" />
+
+        <Button
+            android:id="@+id/create_acc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/user_password"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/button_shape"
+            android:elevation="10dp"
+            android:fontFamily="@font/roboto_bold"
+            android:text="create"
+            android:textColor="#fff"
+            android:textSize="16sp" />
+
+
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="@string/sign_up"
-            android:textSize="20sp"
-            android:textAllCaps="false"
-            android:layout_gravity="center"
+            android:layout_height="34dp"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="@string/sign_up"
+            android:textAllCaps="false"
+            android:textSize="20sp"
             tools:ignore="ButtonStyle" />
-        </LinearLayout>
+
         <Button
+            android:id="@+id/Forgot_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/contact"
-            android:text="@string/forgot_password_ncontact_us_n"
             android:layout_gravity="center"
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"/>
+            android:layout_margin="10dp"
+            android:text="@string/forgot_password_ncontact_us_n"
+            android:textSize="20sp" />
 
+        <TextView
+            android:id="@+id/contact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/roboto_medium"
+            android:text="Contact Us"
+            android:textColor="#ABB2B9"
+            android:textSize="25sp" />
 
     </LinearLayout>
-    <TextView
-        android:id="@+id/contact"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contact Us"
-        android:textColor="#ABB2B9"
-        android:layout_below="@id/layout_login"
-        android:layout_centerHorizontal="true"
-        android:textSize="25sp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/roboto_medium"/>
-
-</RelativeLayout>
 </ScrollView>
